# nn-aihara

./: CMakeLists.txt  Doxyfile  README.md  lib.cpp  lib.h  main.cpp  model.cpp  model.h  network.cpp  network.h  neuron.cpp  neuron.h
UML/: class-diag.puml  sequence-diag.puml  use-case-diag.puml
